--- a/src/index.css
+++ b/src/index.css
@@ -221,18 +221,84 @@ a.header__item-link:hover:not(:last-child) {
 }
 
 .game-item {
-  position: relative;
+  /* position: relative; */
   background-color: var(--color-dark-2);
   border-radius: var(--br-2);
+  margin-bottom: var(--mg-1);
+}
+
+.game-item__card__top {
+  position: relative;
+  width: 100%;
+  height: 200px;
+}
+
+.game-item__card__top video {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: var(--br-2);
+  border-top-right-radius: var(--br-2);
 }
 
 .game-item__img__top {
-  height: 200px;
+  position: absolute;
+  z-index: 2;
+  opacity: 1;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
-  /* position: relative; */
+  border-top-left-radius: var(--br-2);
+  border-top-right-radius: var(--br-2);
 }
+
+.game-item__btn__bottom {
+  position: absolute;
+  z-index: 4;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.game-item__btn__bottom>svg {
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 5px 4px 5px 6px;
+  border-radius: 50%;
+}
+
+.game-item__btn__bottom>span {
+  opacity: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 0 8px 0 4px;
+  border-radius: var(--br-1);
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.game-item__btn__bottom>span:hover {
+  opacity: 1!important;
+}
+
+.game-item__btn__bottom>span svg {
+  width: 30px;
+  height: 30px;
+  padding: 2px;
+  border-radius: 50%;
+}
+
 .game-item__info {
   padding: var(--pd-3);
 }
@@ -260,12 +326,17 @@ a.header__item-link:hover:not(:last-child) {
 }
 
 .game-item__info__title {
+  font-size: 24px;
   margin-top: var(--mg-0);
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  text-overflow: ellipsis;
   line-height: 30px;
-  height: 30px;
+}
+
+.game-item__info__title a {
+  text-decoration: none;
+  color: #fff;
 }
 
 .game-item__info__title-react svg {
