--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #fff;
-  background-color: #151515;
+  background-color: #151515!important;
 }
 
 code {
@@ -38,7 +38,6 @@ code {
 .header {
   position: relative;
   width: 100%;
-  z-index: -2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -70,10 +69,14 @@ code {
 
 a.header__item-logo {
   font-weight: 900;
-  color: white;
+  color: #fff;
   text-decoration: none;
   letter-spacing: 5px;
   font-size: 18px;
+}
+
+a.header__item-logo:hover {
+  color: #fff;
 }
 
 .header__form-search {
@@ -124,7 +127,7 @@ a.header__item-logo {
 }
 
 a.header__item-link {
-  color: white;
+  color: #fff;
   text-decoration: none;
   text-transform: uppercase;
   margin: 0 var(--mg-0);
@@ -133,6 +136,7 @@ a.header__item-link {
 }
 
 a.header__item-link:hover:not(:last-child) {
+  color: #fff;
   border-bottom: 2px solid #fff;
 }
 
@@ -153,14 +157,15 @@ a.header__item-link:hover:not(:last-child) {
 .form-login {
   display: flex;
   flex-direction: column;
+  color: #fff;
 }
 
 
 .form-login input {
   height: 50px;
   width: 300px;
-  padding: 0 var(--pd-0);
   color: #fff;
+  padding: 0 var(--pd-0);
   background: rgba(0 0 0 / 50%);
   margin-bottom: var(--mg-1);
   border-radius: var(--br-1);
@@ -277,22 +282,26 @@ a.header__item-link:hover:not(:last-child) {
   background-color: rgba(0, 0, 0, 0.6);
   padding: 5px 4px 5px 6px;
   border-radius: 50%;
+  color: #fff;
 }
 
-.game-item__btn__bottom>span {
+.game-item__btn__bottom>button {
   opacity: 0;
   background-color: rgba(0, 0, 0, 0.8);
   padding: 0 8px 0 4px;
   border-radius: var(--br-1);
   font-size: 14px;
   cursor: pointer;
+  color: #fff;
+  outline: none;
+  border: 0;
 }
 
-.game-item__btn__bottom>span:hover {
+.game-item__btn__bottom>button:hover {
   opacity: 1!important;
 }
 
-.game-item__btn__bottom>span svg {
+.game-item__btn__bottom>button svg {
   width: 30px;
   height: 30px;
   padding: 2px;
@@ -315,6 +324,7 @@ a.header__item-link:hover:not(:last-child) {
 
 .game-item__info__detail__platforms svg {
   margin-right: 4px;
+  color: #fff;
 }
 
 .game-item__info__detail__metascore span {
@@ -344,4 +354,123 @@ a.header__item-link:hover:not(:last-child) {
   font-size: 26px;
   line-height: 30px;
   color: var(--color-gray-0);
+}
+
+/* loading */
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #fff;
+}
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.page .lds-spinner,
+.game-item__card__top .lds-spinner {
+  position: absolute;
+  z-index: 3;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* margin: auto;
+  left: 0; right: 0; top: 0; bottom: 0; */
+}
+
+.genres__content__loading .lds-spinner{
+  position: inherit;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* modal game item full video */
+.game-item-modal .modal-dialog {}
+
+.game-item-modal .modal-content {
+  box-shadow: 0 5px 15px rgba(0,0,0,.5);
+  padding: 0;
+  border: none;
+}
+
+.game-item-modal button {
+  position: absolute;
+  z-index: 10;
+  right: -50px;
+  padding: 10px;
+  border-radius: 50%;
+  border: 1px solid;
+}
+
+.game-item-modal .modal-content .ytp-pause-overlay.ytp-scroll-min {
+  display: none!important;
 }
