--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -65,7 +65,6 @@ a.header__item-logo:hover {
   background-color: #fff;
 }
 
-
 .header__form-search i.fa-search {
   position: absolute;
   left: 1rem;
@@ -90,6 +89,34 @@ a.header__item-logo:hover {
 .header__form-search input:focus {
   color: #000;
   background-color: #fff;
+}
+
+.form-search__result {
+  position: absolute;
+  z-index: 5;
+  width: 100%;
+  top: 3.5rem;
+  background-color: #000;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.result-item {
+  display: flex;
+  color: white;
+  margin-bottom: 1rem;
+  max-height: 500px;
+}
+
+.result-item__media img {
+  width: 3rem;
+  height: 3rem;
+  margin-right: 0.5rem;
+  border-radius: 4px;
+}
+
+.result-item__info__platforms svg {
+  margin-right: 4px;
 }
 
 a.header__item-link {
