--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@
   --color-dark-gray: hsla(0,0%,100%,0.07);
   
   --color-gray-0: #777;
+  --fs-extra-large: 2rem;
   --fs-large: 1.5rem;
   --fs-medium: 1.2rem;
   --fs-small: 1rem;
