--- a/src/styles/Auth.css
+++ b/src/styles/Auth.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   color: #fff;
+  width: 300px;
 }
 
 .form-login input {
@@ -32,15 +33,15 @@
   border:none;
 }
 
-.form-login .link-signup {
+.form-login .link-login-signup {
   margin-top: 1rem;
 }
 
-.form-login .link-signup a {
-  text-decoration: none;
+.form-login .link-login-signup a {
   color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid;
 }
 
-.form-login .link-signup a:hover {
-  text-decoration: underline;
+.error-message {
 }
